infra/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golinks-front
spec:
  selector:
    matchLabels:
      app: golinks-front
  template:
    metadata:
      labels:
        app: golinks-front
    spec:
      containers:
      - name: golinks-api
        image: natanchagas/golinks-front:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"
        ports:
        - containerPort: 1323

---

apiVersion: v1
kind: Service
metadata:
  name: golinks-front
spec:
  type: NodePort
  selector:
    app: golinks-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1323
